--- a/pxb-publish/package.json
+++ b/pxb-publish/package.json
@@ -30,12 +30,6 @@
         "package.json"
     ],
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 0",
-        "prettier": "prettier \"./**/**.{ts,tsx,js,jsx,json,css,scss,html,md}\" --write"
-    },
-    "prettier": "@pxblue/prettier-config",
-    "devDependencies": {
-        "@pxblue/prettier-config": "^1.0.2",
-        "prettier": "^2.2.1"
+        "test": "echo \"Error: no test specified\" && exit 0"
     }
 }
