--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build_cli:
+  build:
     working_directory: ~/automation
     docker:
       - image: circleci/node:12.16.3-browsers
