--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2
+orbs:
+  github-cli: circleci/github-cli@1.0.2
 jobs:
   build:
     working_directory: ~/automation
@@ -44,13 +46,6 @@ jobs:
       - image: circleci/node:12.16.3-browsers
     steps:
       - checkout
-      - run:
-          name: Install GitHub CLI
-          command: |
-            wget https://github.com/github/hub/releases/download/v2.12.8/hub-linux-amd64-2.12.8.tgz
-            tar zxvf hub-linux-amd64-2.12.8.tgz
-            sudo mv hub-linux-amd64-2.12.8/bin/hub /usr/local/bin/hub
-            sudo chmod +x /usr/local/bin/hub
       - run:
           name: auto tag test
           command: |
