--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,8 @@ jobs:
           command: |
             cd pxb-publish
             bash scripts/publish.sh -b $CIRCLE_BRANCH
+            gh pr create --title "Bugfix from $CIRCLE_BRANCH"
+
 
   tag_test:
     docker:
