--- a/pxb-tag/package.json
+++ b/pxb-tag/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@pxblue/angular-components",
+    "name": "@emclaug2/tag-test",
     "description": "A script that can be used to automatically tag packages in a continuous integration pipeline.",
-    "version": "4.0.0",
+    "version": "1.0.0",
     "author": "Power Xpert Blue <pxblue@eaton.com> (https://github.com/pxblue)",
     "license": "BSD-3-Clause",
     "repository": {
