--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,4 @@
-version: 2.1
-orbs:
-  github-cli: circleci/github-cli@1.0.2
+version: 2
 jobs:
   build:
     working_directory: ~/automation
@@ -41,20 +39,68 @@ jobs:
             cd pxb-publish
             bash scripts/publish.sh -b $CIRCLE_BRANCH
 
-
-  tag_test:
+  publish_pxblue_tag:
     docker:
       - image: circleci/node:12.16.3-browsers
     steps:
       - checkout
       - run:
-          name: auto tag test
+          name: Authenticate with registry
+          command: |
+            echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
+            echo "//registry.yarnpkg.com/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+      - run:
+          name: Publish @pxblue/tag
           command: |
             cd pxb-tag
-            bash scripts/tag.sh -b $CIRCLE_BRANCH -s -angular-test
+            bash ../pxb-publish/scripts/publish.sh -b $CIRCLE_BRANCH
+
+  tag_pxblue_publish:
+    docker:
+      - image: circleci/node:12.16.3-browsers
+    steps:
+      - checkout
+      - run:
+          name: Tag @pxblue/publish
+          command: |
+            cd pxb-publish
+            bash ../pxb-tag/scripts/tag.sh -b $CIRCLE_BRANCH -s -publish
+
+  tag_pxblue_tag:
+    docker:
+      - image: circleci/node:12.16.3-browsers
+    steps:
+      - checkout
+      - run:
+          name: Tag @pxblue/tag
+          command: |
+            cd pxb-tag
+            bash scripts/tag.sh -b $CIRCLE_BRANCH -s -tag
 
 workflows:
   version: 2
   pxblue_automation:
     jobs:
-      - tag_test
+      - build
+      - publish_pxblue_publish:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - master
+                - dev
+      - publish_pxblue_tag:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - master
+                - dev
+      - tag_pxblue_publish:
+          requires:
+            - build
+      - tag_pxblue_tag:
+          requires:
+            - build
