--- a/pxb-publish/package.json
+++ b/pxb-publish/package.json
@@ -30,6 +30,7 @@
         "package.json"
     ],
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 0"
+        "test": "echo \"Error: no test specified\" && exit 0",
+        "pxb-tag": "pxb-tag"
     }
 }
