--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
           name: Tag @pxblue/publish
           command: |
             cd pxb-publish
-            yarn add @pxblue/tag@1.0.0-beta.1
+            yarn add @pxblue/tag
             yarn pxb-tag -b $CIRCLE_BRANCH -s -pxb-publish
 
   tag_pxblue_tag:
@@ -76,6 +76,7 @@ jobs:
           name: Tag @pxblue/tag
           command: |
             cd pxb-tag
+            yarn add @pxblue/tag
             npx -p @pxblue/tag pxb-tag -b $CIRCLE_BRANCH -s -pxb-tag
 
 workflows:
