--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ jobs:
           command: |
             cd pxb-publish
             yarn add @pxblue/tag
-            yarn pxb-tag -b $CIRCLE_BRANCH -s -pxb-publish
+            pxb-tag -b $CIRCLE_BRANCH -s -pxb-publish
 
   tag_pxblue_tag:
     docker:
