--- a/pxb-publish/package.json
+++ b/pxb-publish/package.json
@@ -30,7 +30,9 @@
         "package.json"
     ],
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 0",
-        "pxb-tag": "pxb-tag"
+        "test": "echo \"Error: no test specified\" && exit 0"
+    },
+    "devDependencies": {
+        "@pxblue/tag": "^1.0.0-beta.3"
     }
 }
