--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
           name: Tag @pxblue/publish
           command: |
             cd pxb-publish
-            yarn && yarn pxb-tag -b $CIRCLE_BRANCH -s -pxb-publish
+            gh issue list
 
   tag_pxblue_tag:
     docker:
