--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,7 +102,7 @@ workflows:
                 - master
                 - dev
       - gh/release:
-          notes-file: pxb-tag/changelog.md
+          notes-file: ~/automation/pxb-tag/CHANGELOG.md
           requires:
             - build
           tag: 1.0.0
