--- a/pxb-publish/package.json
+++ b/pxb-publish/package.json
@@ -30,9 +30,10 @@
         "package.json"
     ],
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 0"
+        "test": "echo \"Error: no test specified\" && exit 0",
+        "pxb-tag": "pxb-tag"
     },
     "devDependencies": {
-        "@pxblue/tag": "^1.0.0-beta.3"
+        "@pxblue/tag": "^1.0.0-beta.4"
     }
 }
