--- a/pxb-tag/package.json
+++ b/pxb-tag/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@pxblue/tag",
     "description": "A script that can be used to automatically tag packages in a continuous integration pipeline.",
-    "version": "1.0.0-beta.6",
+    "version": "1.0.0",
     "author": "Power Xpert Blue <pxblue@eaton.com> (https://github.com/pxblue)",
     "license": "BSD-3-Clause",
     "repository": {
@@ -15,7 +15,8 @@
         "pxblue",
         "automation",
         "tag",
-        "git"
+        "git",
+        "release"
     ],
     "main": "index.js",
     "bin": {
@@ -31,6 +32,6 @@
     ],
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 0",
-        "pxb-tag": "pxb-tag"
+        "tag-package": "npx -p @pxblue/tag pxb-tag"
     }
 }
