Add pxb-parse-changelog to bin

--- a/pxb-publish/package.json
+++ b/pxb-publish/package.json
@@ -20,7 +20,8 @@
     ],
     "main": "index.js",
     "bin": {
-        "pxb-publish": "scripts/publish.sh"
+        "pxb-publish": "scripts/publish.sh",
+        "pxb-parse-changelog": "../pxb-tag/scripts/parse-changelog.js"
     },
     "files": [
         "scripts/",
