--- a/pxb-publish/package.json
+++ b/pxb-publish/package.json
@@ -32,6 +32,6 @@
     ],
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 0",
-        "tag-package": "bash ../pxb-tag/scripts/tag.sh"
+        "tag:package": "npx -p @pxblue/tag pxb-tag"
     }
 }
