--- a/pxb-publish/package.json
+++ b/pxb-publish/package.json
@@ -20,7 +20,7 @@
     ],
     "main": "index.js",
     "bin": {
-        "pxb-publish": "scripts/publish.sh",
+        "pxb-publish": "scripts/publish.sh"
     },
     "files": [
         "scripts/",
