--- a/blui-code-automation/package.json
+++ b/blui-code-automation/package.json
@@ -23,8 +23,6 @@
         "start": "node index.js"
     },
     "dependencies": {
-        "axios": "^0.27.2",
-        "markdown-it": "^13.0.1",
-        "parse-md": "^3.0.3"
+        "axios": "^0.27.2"
     }
 }
