--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -3,6 +3,10 @@ on:
   pull_request_target:
     branches:
       - master
+  workflow_call:
+
+permissions:
+  pull-requests: write
 
 jobs:
   example_comment_pr:
