--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -1,8 +1,10 @@
 name: 'Comment on PR'
 on:
   pull_request_target:
+    types:
+      - opened
     branches:
-      - master
+      - 'master'
   workflow_call:
 
 permissions:
