--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -4,7 +4,7 @@ on:
     types:
       - opened
     branches:
-      - 'master'
+      - master
   workflow_call:
 
 permissions:
@@ -13,7 +13,7 @@ permissions:
 jobs:
   example_comment_pr:
     runs-on: ubuntu-latest
-    name: comment PR if needed
+    name: comment PR
     steps:
       - name: Checkout
         uses: actions/checkout@v3
