--- a/.github/workflows/blui-comment.yml
+++ b/.github/workflows/blui-comment.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/github-script@v6
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             github.rest.issues.createComment({
               issue_number: context.issue.number,
