Blui 4197 add PR types

--- a/.github/workflows/blui-comment.yml
+++ b/.github/workflows/blui-comment.yml
@@ -2,8 +2,7 @@ name: blui-comment
 run-name: Comment
 on:
   pull_request_target:
-    types:
-      - opened
+    types: types: [opened, edited, synchronize]
   workflow_call:
 
 permissions:
