--- a/.github/workflows/blui-labels.yml
+++ b/.github/workflows/blui-labels.yml
@@ -2,8 +2,7 @@ name: blui-labels
 run-name: Labels
 on: 
   pull_request_target:
-    types:
-      - opened
+    types: [opened, edited, synchronize]
   workflow_call:
 
 permissions:
