--- a/.github/workflows/blui-labels.yml
+++ b/.github/workflows/blui-labels.yml
@@ -2,7 +2,10 @@ name: blui-labels
 run-name: Labels
 on: 
   pull_request_target:
-    types: [opened, edited, synchronize]
+    types: 
+      - opened
+      - edited
+      - synchronize
   workflow_call:
 
 permissions:
