--- a/.github/workflows/blui-labels.yml
+++ b/.github/workflows/blui-labels.yml
@@ -26,12 +26,11 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              labels: ['master', 'brightlayer-ui']
+              labels: ['master']
             })
 
   label-dev:
     runs-on: ubuntu-latest
-    if: ${{ github.event.pull_request.base.ref == 'dev' }}
     steps:
       - uses: actions/github-script@v6
         with:
